<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterStudentActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/TextViewTitleStyle"
        android:layout_width="392dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_student_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="307dp"
        android:layout_height="468dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0" />

        <Spinner
            android:id="@+id/spinnerSex"
            android:layout_width="284dp"
            android:layout_height="48dp"
            android:entries="@array/sex_items"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/editTextBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birth_date_hint"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/editTextCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/editTextGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/grade_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        style="@style/DefaultBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>