<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/idLLCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <!--text view for our course name-->
            <TextView
                android:id="@+id/textViewNames"
                style="@style/InformativeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/names_format"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <!--text view for our course duration-->
            <TextView
                android:id="@+id/textViewSexAndBirthDate"
                style="@style/InformativeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_sex_format"
                android:textColor="@color/black" />

            <!--text view for our course description-->
            <TextView
                android:id="@+id/textViewCourseAndGrade"
                style="@style/InformativeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/course_grade_format"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewPicStudent"
            android:layout_width="@dimen/default_avatar_width"
            android:layout_height="@dimen/default_avatar_height"
            android:layout_weight="1"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/default_avatar_male" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
